# bikeshare

./: .dockerignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml  sqlx-data.json
.github/workflows/: checks.yml  fly-deploy.yml
migrations/: 20230603150121_cache.sql
src/: api.rs  cache.rs  db.rs  lib.rs  main.rs  status.rs
