[package]
name = "bikeshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["trace"] }
sublime_fuzzy = "0.7"
tracing-opentelemetry = "0.17"
opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.9"
axum-prometheus = "0.3.3"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
time = { version = "0.3.21", features = ["std", "formatting"] }
